--- a/employee/templates/index.html
+++ b/employee/templates/index.html
@@ -24,7 +24,7 @@
     </div>  
   </div>  
   <div class="form-group row">  
-    <b><label class="col-sm-2 col-form-label">Employee Name:</label></b>  
+    <label class="col-sm-2 col-form-label">Employee Name:</label>  
     <div class="col-sm-4">  
       {{ form.ename }}  
     </div>  
