--- a/employee/templates/index.html
+++ b/employee/templates/index.html
@@ -12,7 +12,7 @@
     <div class="container">  
 <br>  
     <div class="form-group row">  
-    <label class="col-sm-1 col-form-label"></label>  
+   <b> <label class="col-sm-1 col-form-label"></label>  </b>
     <div class="col-sm-4">  
     <h3>Enter Details</h3>  
     </div>  
